--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,19 +3,32 @@
   "editor.formatOnSave": true,
   "[c]": {
     "editor.defaultFormatter": "xaver.clang-format",
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
   },
   "[cpp]": {
     "editor.defaultFormatter": "xaver.clang-format",
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
   },
   "[markdown]": {
     "editor.defaultFormatter": "unifiedjs.vscode-remark",
     "editor.formatOnSave": false
   },
   "files.associations": {
+    "*.tsx": "typescriptreact",
     "*.h": "c",
-    "*.hpp": "cpp"
+    "*.hpp": "cpp",
+    "string_view": "c",
+    "array": "c",
+    "chrono": "c",
+    "compare": "c",
+    "functional": "c",
+    "istream": "c",
+    "ostream": "c",
+    "ratio": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c",
+    "cstdint": "c"
   },
   "files.exclude": {
     "**/.git": true,
